# dim_red_tests

./: .gitignore  README.md  pyproject.toml
dim_red_tests/: algorithms.py  datasets.py  main.py  utils.py  visualization.py
